--- a/templates/packaeges.html
+++ b/templates/packaeges.html
@@ -1,12 +1,14 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        {%block body_block%}
+        <style>
         body {
             background: #59ABE3;
             margin: 0
@@ -91,7 +93,7 @@
         <p type="Packaeges_Offer:"><input name="packaeges_offer"></input></p>
         <button>Add Packaeges</button><br><br>
     </form>
-
+    {%endblock%}
 </body>
 
 </html>
