--- a/templates/Appointment.html
+++ b/templates/Appointment.html
@@ -1,189 +1,97 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-    <style>
-        body {
-            background-color: #5fcf80;
-        }
-
-        #body_header {
-
-            width: auto;
-            margin: 0px auto;
-            text-align: center;
-            font-size: 25px;
-        }
-
-        form {
-            max-width: 300px;
-            margin: 10px auto;
-            padding: 10px 20px;
-            background: #f4f7f8;
-            border-radius: 8px;
-        }
-
-        h1 {
-            margin: 0 0 30px 0;
-            text-align: center;
-        }
-
-        input[type="text"],
-        input[type="password"],
-        input[type="date"],
-        input[type="datetime"],
-        input[type="email"],
-        input[type="number"],
-        input[type="search"],
-        input[type="tel"],
-        input[type="time"],
-        input[type="url"],
-        textarea,
-        select {
-            background: rgba(255, 255, 255, 0.1);
-            border: none;
-            font-size: 16px;
-            height: auto;
-            margin: auto;
-            outline: 0;
-            padding: 8px;
-            width: 100%;
-            background-color: #e8eeef;
-            color: black;
-            box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
-            margin-bottom: 30px;
-        }
-
-        input[type="radio"],
-        input[type="checkbox"] {
-            margin: 0 4px 8px 0;
-        }
-
-        select {
-            padding: 6px;
-            height: 32px;
-            border-radius: 2px;
-        }
-
-        button {
-            padding: 19px 39px 18px 39px;
-            color: #FFF;
-            background-color: #4bc970;
-            font-size: 18px;
-            text-align: center;
-            font-style: normal;
-            border-radius: 5px;
-            width: 100%;
-            border: 1px solid #3ac162;
-            border-width: 1px 1px 3px;
-            box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
-            margin-bottom: 10px;
-        }
-
-        fieldset {
-            margin-bottom: 30px;
-            border: none;
-        }
-
-        legend {
-            font-size: 1.4em;
-            margin-bottom: 10px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 8px;
-        }
-
-        label.light {
-            font-weight: 300;
-            display: inline;
-        }
-
-        .number {
-            background-color: #5fcf80;
-            color: #fff;
-            height: 30px;
-            width: 30px;
-            display: inline-block;
-            font-size: 0.8em;
-            margin-right: 4px;
-            line-height: 30px;
-            text-align: center;
-            text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
-            border-radius: 100%;
-        }
-
-
-
-        form {
-            max-width: 480px;
-        }
-    </style>
+    <title>How To Create Book Appointment Form HTML In Bootstrap 5</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% block body_block%}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
+    <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
-    <div class="row">
-
-
-        <div id="container">
-            <!--This is a division tag for body container-->
-            <div id="body_header">
-                <!--This is a division tag for body header-->
-                <h1>Appointment Request Form</h1>
-                <p>Make your appointments more easier</p>
-
-            </div>
-            <form action="" method="POST">
-                {% csrf_token %}
-                <fieldset>
-                    <legend><span class="number">1</span>Your basic details</legend>
-                    <label for="name">Client_Name:</label>
-                    <input type="text" id="name" name="user_name" placeholder="Atchyut (only first names)" required
-                        pattern="[a-zA-Z0-9]+" name="client_name">
-
-                    <label for="mail">Client_Address:</label>
-                    <textarea id="mail" cols="30" rows="10" name="client_address"></textarea><hr>
-                    <div class="col-sm-6">
-
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6 offset-md-3 border p-4 shadow bg-light">
+                <div class="col-12">
+                    <h3 class="fw-normal text-secondary fs-4 text-uppercase mb-4">Appointment form</h3>
+                </div>
+                <form action="{% url 'appo'%}" method="POST">
+                    {% csrf_token%}
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" placeholder="client_name" id="name" name="name">
+                        </div>
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" placeholder="client_address" id="add" name="address">
+                        </div>
+                        <div class="col-md-6">
+                            <input type="tel" class="form-control" placeholder="Phone Number" id="number" name="number">
+                        </div>
+                        <div class="col-md-6">
+                            <input type="email" class="form-control" placeholder="Enter Email" id="email" name="email">
+                        </div>
+                        <div class="col-md-6">
+                            <input type="date" class="form-control" placeholder="Enter Date" id="date" name="date">
+                        </div>
+                        <div class="col-md-6">
+                            <input type="time" class="form-control" placeholder="Enter time" id="time" name="time">
+                        </div>
+                        <div class="col-12">
+                            <textarea class="form-control" placeholder="Message" id="msg" name="msg"></textarea>
+                        </div>
+                        <div class="col-12 mt-5">
+                            <button type="button" class="btn btn-primary float-end" onclick="sendmail()">Book Appointment</button>
+                            <button type="button" class="btn btn-outline-secondary float-end me-2">Cancel</button>
+                        </div>
                     </div>
-                    <label for="tel">Client_email:</label>
-                    <input type="email" id="tel" placeholder="E-mail" name="client_email">
-
-                    <label for="appointment_for">Service for:</label>
-                    <select id="appointment_for" name="appointment_for" required>
-                        <option value="coffee">Coffee</option>
-                        <option value="meeting">Meeting</option>
-                        <option value="Business">Business</option>
-                        <option value="lunch">Lunch</option>
-                        <option value="skype">Skype</option>
-                        <option value="movie">Movie</option>
-                        <option value="couple_date">Date</option>
-                    </select>
-
-                    <label for="skype_name">appointment_date:</label>
-                    <input type="date" id="skype_name" name="appointment_date">
-
-                    <label for="skype_name">appointment_time:</label>
-                    <input type="time" id="skype_name" name="appointment_time">
-
-                </fieldset>
-
-                <button type="submit">Request For Appointment</button>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
-    </div>
+    <script>
+        function sendmail() {
+            var name = $('#name').val();
+            var add = $('#add').val();
+            var number = $('#number').val();
+            var email = $('#email').val();
+            var date = $('#date').val();
+            var time = $('#time').val();
+            var msg = $('#msg').val();
 
+            var Body = 'Name: ' + name + '<br> Address:' + add +'<br> Number:' + number +'<br> Email:' + email + '<br>Date:' + date + '<br>Time:' + time + '<br>Msg:' + msg;
+
+            Email.send({    
+                Host: "smtp.elasticemail.com",
+                Username: "ajaykumawat450@gmail.com",
+                Password: "3C5A7C065DDF37F8F381FA8B56FA7FBA12DF",
+                To: "mayursali396@gmail.com",
+                From: "ajaykumawat450@gmail.com",
+                Subject: "This is the subject",
+                Body: Body
+
+            }).then(
+                message => {
+                    if (message == 'Ok') {
+                        alert('Retry');
+                    }
+                    else {
+                        console.error(message);
+                        alert('Your mail has been sent');
+                    }
+                }
+            );
+        }
+    </script>
+</body>
+{%endblock%}
 </body>
 
 </html>
