--- a/templates/chekout.html
+++ b/templates/chekout.html
@@ -1,12 +1,14 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
-
+{% load qr_code %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    {%block body_block%}
 </head>
 
 <body>
@@ -70,13 +72,7 @@
                 </div>
                 <div>
                     <label class="text-white dark:text-gray-200" for="passwordConfirmation">State</label>
-                    <select
-                        class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
-                        <option>Surabaya</option>
-                        <option>Jakarta</option>
-                        <option>Tangerang</option>
-                        <option>Bandung</option>
-                    </select>
+                    <input id="passwordConfirmation" type="text" name="state" class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">   
                 </div>
 
                 <div>
@@ -94,8 +90,9 @@
                     <input id="date" type="text" name="gst"
                         class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
                 </div>
-                 <button class="flex items-center px-5 py-2.5 font-medium tracking-wide text-white capitalize   bg-black rounded-md hover:bg-green-800  focus:outline-none focus:bg-gray-900  transition duration-300 transform active:scale-95 ease-in-out">Save</button>
-                
+                <button
+                    class="flex items-center px-5 py-2.5 font-medium tracking-wide text-white capitalize   bg-black rounded-md hover:bg-green-800  focus:outline-none focus:bg-gray-900  transition duration-300 transform active:scale-95 ease-in-out">Save</button>
+
                 <!-- <div>
                     <label class="block text-sm font-medium text-white">
                         Image
@@ -126,7 +123,8 @@
             </div>
         </form>
     </section>
+   
 </body>
-
+{%endblock%}
 
 </html>
