--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,307 +7,116 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="slide navbar style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+	{%block body_block%}
 	<style>
-		*,
-		*::before,
-		*::after {
-			box-sizing: border-box;
-		}
-
-		body {
+		.a {
 			margin: 0;
-			font-family: Roboto, -apple-system, 'Helvetica Neue', 'Segoe UI', Arial, sans-serif;
-			background: #3b4465;
-		}
-
-		.forms-section {
+			padding: 0;
 			display: flex;
-			flex-direction: column;
 			justify-content: center;
 			align-items: center;
+			min-height: 100vh;
+			font-family: 'Jost', sans-serif;
+			background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 		}
 
-		.section-title {
-			font-size: 32px;
-			letter-spacing: 1px;
-			color: #fff;
+		.main {
+			width: 350px;
+			height: 500px;
+			background: red;
+			overflow: hidden;
+			background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
+			border-radius: 10px;
+			box-shadow: 5px 20px 50px #000;
 		}
 
-		.forms {
-			display: flex;
-			align-items: flex-start;
-			margin-top: 30px;
+		#chk {
+			display: none;
 		}
 
-		.form-wrapper {
-			animation: hideLayer .3s ease-out forwards;
-		}
-
-		.form-wrapper.is-active {
-			animation: showLayer .3s ease-in forwards;
-		}
-
-		@keyframes showLayer {
-			50% {
-				z-index: 1;
-			}
-
-			100% {
-				z-index: 1;
-			}
-		}
-
-		@keyframes hideLayer {
-			0% {
-				z-index: 1;
-			}
-
-			49.999% {
-				z-index: 1;
-			}
-		}
-
-		.switcher {
+		.signup {
 			position: relative;
+			width: 100%;
+			height: 100%;
+		}
+
+		label {
+			color: #fff;
+			font-size: 2.3em;
+			justify-content: center;
+			display: flex;
+			margin: 60px;
+			font-weight: bold;
 			cursor: pointer;
-			display: block;
-			margin-right: auto;
-			margin-left: auto;
-			padding: 0;
-			text-transform: uppercase;
-			font-family: inherit;
-			font-size: 16px;
-			letter-spacing: .5px;
-			color: #999;
-			background-color: transparent;
+			transition: .5s ease-in-out;
+		}
+
+		input {
+			width: 60%;
+			height: 20px;
+			background: #e0dede;
+			justify-content: center;
+			display: flex;
+			margin: 20px auto;
+			padding: 10px;
 			border: none;
 			outline: none;
-			transform: translateX(0);
-			transition: all .3s ease-out;
-		}
-
-		.form-wrapper.is-active .switcher-login {
-			color: #fff;
-			transform: translateX(90px);
-		}
-
-		.form-wrapper.is-active .switcher-signup {
-			color: #fff;
-			transform: translateX(-90px);
-		}
-
-		.underline {
-			position: absolute;
-			bottom: -5px;
-			left: 0;
-			overflow: hidden;
-			pointer-events: none;
-			width: 100%;
-			height: 2px;
-		}
-
-		.underline::before {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: inherit;
-			display: block;
-			width: inherit;
-			height: inherit;
-			background-color: currentColor;
-			transition: transform .2s ease-out;
-		}
-
-		.switcher-login .underline::before {
-			transform: translateX(101%);
-		}
-
-		.switcher-signup .underline::before {
-			transform: translateX(-101%);
-		}
-
-		.form-wrapper.is-active .underline::before {
-			transform: translateX(0);
-		}
-
-		.form {
-			overflow: hidden;
-			min-width: 260px;
-			margin-top: 50px;
-			padding: 30px 25px;
 			border-radius: 5px;
-			transform-origin: top;
 		}
 
-		.form-login {
-			animation: hideLogin .3s ease-out forwards;
-		}
-
-		.form-wrapper.is-active .form-login {
-			animation: showLogin .3s ease-in forwards;
-		}
-
-		@keyframes showLogin {
-			0% {
-				background: #d7e7f1;
-				transform: translate(40%, 10px);
-			}
-
-			50% {
-				transform: translate(0, 0);
-			}
-
-			100% {
-				background-color: #fff;
-				transform: translate(35%, -20px);
-			}
-		}
-
-		@keyframes hideLogin {
-			0% {
-				background-color: #fff;
-				transform: translate(35%, -20px);
-			}
-
-			50% {
-				transform: translate(0, 0);
-			}
-
-			100% {
-				background: #d7e7f1;
-				transform: translate(40%, 10px);
-			}
-		}
-
-		.form-signup {
-			animation: hideSignup .3s ease-out forwards;
-		}
-
-		.form-wrapper.is-active .form-signup {
-			animation: showSignup .3s ease-in forwards;
-		}
-
-		@keyframes showSignup {
-			0% {
-				background: #d7e7f1;
-				transform: translate(-40%, 10px) scaleY(.8);
-			}
-
-			50% {
-				transform: translate(0, 0) scaleY(.8);
-			}
-
-			100% {
-				background-color: #fff;
-				transform: translate(-35%, -20px) scaleY(1);
-			}
-		}
-
-		@keyframes hideSignup {
-			0% {
-				background-color: #fff;
-				transform: translate(-35%, -20px) scaleY(1);
-			}
-
-			50% {
-				transform: translate(0, 0) scaleY(.8);
-			}
-
-			100% {
-				background: #d7e7f1;
-				transform: translate(-40%, 10px) scaleY(.8);
-			}
-		}
-
-		.form fieldset {
-			position: relative;
-			opacity: 0;
-			margin: 0;
-			padding: 0;
-			border: 0;
-			transition: all .3s ease-out;
-		}
-
-		.form-login fieldset {
-			transform: translateX(-50%);
-		}
-
-		.form-signup fieldset {
-			transform: translateX(50%);
-		}
-
-		.form-wrapper.is-active fieldset {
-			opacity: 1;
-			transform: translateX(0);
-			transition: opacity .4s ease-in, transform .35s ease-in;
-		}
-
-		.form legend {
-			position: absolute;
-			overflow: hidden;
-			width: 1px;
-			height: 1px;
-			clip: rect(0 0 0 0);
-		}
-
-		.input-block {
-			margin-bottom: 20px;
-		}
-
-		.input-block label {
-			font-size: 14px;
-			color: #a1b4b4;
-		}
-
-		.input-block input {
+		button {
+			width: 60%;
+			height: 40px;
+			margin: 10px auto;
+			justify-content: center;
 			display: block;
-			width: 100%;
-			margin-top: 8px;
-			padding-right: 15px;
-			padding-left: 15px;
-			font-size: 16px;
-			line-height: 40px;
-			color: #3b4465;
-			background: #eef9fe;
-			border: 1px solid #cddbef;
-			border-radius: 2px;
-		}
-
-		.form [type='submit'] {
-			opacity: 0;
-			display: block;
-			min-width: 120px;
-			margin: 30px auto 10px;
-			font-size: 18px;
-			line-height: 40px;
-			border-radius: 25px;
+			color: #fff;
+			background: #573b8a;
+			font-size: 1em;
+			font-weight: bold;
+			margin-top: 20px;
+			outline: none;
 			border: none;
-			transition: all .3s ease-out;
+			border-radius: 5px;
+			transition: .2s ease-in;
+			cursor: pointer;
 		}
 
-		.form-wrapper.is-active .form [type='submit'] {
-			opacity: 1;
-			transform: translateX(0);
-			transition: all .4s ease-in;
+		button:hover {
+			background: #6d44b8;
 		}
 
-		.btn-login {
-			color: #fbfdff;
-			background: #a7e245;
-			transform: translateX(-30%);
+		.login {
+			height: 460px;
+			background: #eee;
+			border-radius: 60% / 10%;
+			transform: translateY(-180px);
+			transition: .8s ease-in-out;
 		}
 
-		.btn-signup {
-			color: #a7e245;
-			background: #fbfdff;
-			box-shadow: inset 0 0 0 2px #a7e245;
-			transform: translateX(30%);
+		.login label {
+			color: #573b8a;
+			transform: scale(.6);
+		}
+
+		#chk:checked~.login {
+			transform: translateY(-500px);
+		}
+
+		#chk:checked~.login label {
+			transform: scale(1);
+		}
+
+		#chk:checked~.signup label {
+			transform: scale(.6);
 		}
 	</style>
 </head>
 
 <body>
-	<section class="forms-section">
+	<!-- <section class="forms-section">
 		<h1 class="section-title">Login/Sign Forms</h1>
 		<div class="forms">
 			<div class="form-wrapper is-active">
@@ -379,8 +189,41 @@
 			})
 		})
 
-	</script>
+	</script> -->
 
+
+
+ <div class="a">
+
+ 
+	<div class="main">
+		<input type="checkbox" id="chk" aria-hidden="true">
+
+		<div class="signup">
+			<form action="{% url 'register' %}" class="form form-signup" method="POST">
+				{% csrf_token %}
+				<label for="chk" aria-hidden="true">Sign up</label>
+				<input id="signup-email" type="text" required name="fname" placeholder="Full Name" name="fname">
+				<input id="signup-password-confirm" type="email" required name="email" placeholder="Enter Email" name="email">
+				<input id="signup-password-confirm" type="number" required name="mobile" placeholder="Enetr Mobile" name="mobile">
+				<input id="signup-password-confirm" type="password" required name="password" placeholder="Enetr password" name="password">
+				<input id="signup-password-confirm" type="password" required name="cpassword" placeholder="cpassword" name="cpassword">
+				<button>Sign up</button>
+			</form>
+		</div>
+
+		<div class="login">
+			<form class="form form-login" action="" method="POST">
+				{% csrf_token %}
+				<label for="chk" aria-hidden="true">Login</label>
+				<input id="login-email" type="email" required name="email" placeholder="Enter E-mail">
+				<input id="login-password" type="password" required name="password" placeholder="Enter Password">
+				<button>Login</button>
+			</form>
+		</div>
+	</div>
+</div>
+	{%endblock%}
 </body>
 
 </html>
